--- a/styles.css
+++ b/styles.css
@@ -48,3 +48,36 @@ div{
     font-size:30px;
     text-align: center;
 }
+timer{
+    display: inline-block;
+    padding-left: 33%;
+}
+goalz{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size:10px;
+    color:white;
+    float: right;
+    width: 35%;
+
+}
+p{
+    font-size:20px;
+
+}
+dis{
+    font-size:20px;
+
+}
+
+LABEL{
+    word-wrap: break-word;
+    width:500px;
+
+}
+button{
+    padding-right:50%;
+}
+checkbox{
+   padding-left:50%;
+
+}
